@@ -25,6 +25,10 @@ Changes in ATK 6.3
   url. [Martin]
 * Added MySQL config for setting the collate that is used for
   creating tables true the atkddl. [Sandy]
++ Added save export selection functionality.
+  Set $config_enable_export_save_selection to true to enable this functionality.
+  Also add the atk_exportcriteria table to your database, the mysql table
+  definition for this table can be found in skel/init_mysql.sql. [Ruud, Lineke]
 + Added function for quoting of table and fieldnames. [Sandy]
 + Added Create and Drop index functions to the atkddl. [Sandy]
 - Removed MySQL41 driver, use MySQLi instead. [Sandy]
